[FIX] header z-index

--- a/styles/components/ProductCard.module.css
+++ b/styles/components/ProductCard.module.css
@@ -18,6 +18,6 @@
 .addToCart {
   width: 100%;
   padding: .6rem;
-  z-index: 100;
+  z-index: 5;
   position: relative;
 }
